gitignored unity vs settings

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 *.unityproj
 /Windows-x86
 /Assets/AstarPathfindingProject
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
+/Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
