Increasing HUD size in general for Android, and performance tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Assets/AstarPathfindingProject
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
+*.apk
