Added stuff for escort mission

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
 *.apk
+Builds/
