Fleet screen initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
 *.apk
 Builds/
+Assets/Standard Assets.meta
+Assets/Standard Assets/
