--- a/.gitattributes
+++ b/.gitattributes
@@ -1,63 +1,127 @@
-###############################################################################
-# Set default behavior to automatically normalize line endings.
-###############################################################################
-* text=auto
+# Apply native OS line-endings on checkout of these files...
+*.boo              text
+*.c                text
+*.cginc            text
+*.config           text
+*.contentproj      text
+*.cpp              text
+*.dae              text
+*.DAE              text
+*.dtd              text
+*.fx               text
+*.glsl             text
+*.h                text
+*.inc              text
+*.ini              text
+*.js               text
+*.JSFL             text
+*.jsfl             text
+*.json             text
+*.log              text
+*.md               text
+*.mel              text
+*.php              text
+*.shader           text
+*.txt              text
+*.TXT              text
+*.xaml             text
+*.xml              text
+*.xsd              text
+.gitattributes     text
+.gitignore         text
+COPYING            text
+INSTALL*           text
+KEYS*              text
+LICENSE*           text
+NEWS*              text
+NOTICE*            text
+README*            text
+TODO*              text
+WHATSNEW*          text
 
-###############################################################################
-# Set default behavior for command prompt diff.
-#
-# This is need for earlier builds of msysgit that does not have it on by
-# default for csharp files.
-# Note: This is only used by command line
-###############################################################################
-#*.cs     diff=csharp
+# Apply Unix-style LF line-endings on checkout of these files...
+*.meta             text eol=lf
+*.sh               text eol=lf
+*.vspscc           text eol=lf
+.htaccess          text eol=lf
 
-###############################################################################
-# Set the merge driver for project and solution files
-#
-# Merging from the command prompt will add diff markers to the files if there
-# are conflicts (Merging from VS is not affected by the settings below, in VS
-# the diff markers are never inserted). Diff markers may cause the following 
-# file extensions to fail to load in VS. An alternative would be to treat
-# these files as binary and thus will always conflict and require user
-# intervention with every merge. To do so, just uncomment the entries below
-###############################################################################
-#*.sln       merge=binary
-#*.csproj    merge=binary
-#*.vbproj    merge=binary
-#*.vcxproj   merge=binary
-#*.vcproj    merge=binary
-#*.dbproj    merge=binary
-#*.fsproj    merge=binary
-#*.lsproj    merge=binary
-#*.wixproj   merge=binary
-#*.modelproj merge=binary
-#*.sqlproj   merge=binary
-#*.wwaproj   merge=binary
+# Previous "binary"
+*.unity            text eol=lf
+*.asset            text eol=lf
+*.prefab           text eol=lf
 
-###############################################################################
-# behavior for image files
-#
-# image files are treated as binary by default.
-###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
+# Apply Windows/DOS-style CR-LF line-endings on checkout of these files...
+*.bat              text eol=crlf
+*.cmd              text eol=crlf
+*.csproj           text eol=crlf
+*.sln              text eol=crlf
+*.user             text eol=crlf
+*.vcproj           text eol=crlf
+*.cs               text eol=crlf
+*.css              text eol=crlf
+*.htm              text eol=crlf
+*.html             text eol=crlf
 
-###############################################################################
-# diff behavior for common document formats
-# 
-# Convert binary document formats to text before diffing them. This feature
-# is only available from the command line. Turn it on by uncommenting the 
-# entries below.
-###############################################################################
-#*.doc   diff=astextplain
-#*.DOC   diff=astextplain
-#*.docx  diff=astextplain
-#*.DOCX  diff=astextplain
-#*.dot   diff=astextplain
-#*.DOT   diff=astextplain
-#*.pdf   diff=astextplain
-#*.PDF   diff=astextplain
-#*.rtf   diff=astextplain
-#*.RTF   diff=astextplain
+# No end-of-line conversions are applied (i.e., "-text -diff") to these files...
+*.7z               binary
+*.ai               binary
+*.anim             binary
+*.apk              binary
+*.bin              binary
+*.bmp              binary
+*.BMP              binary
+*.com              binary
+*.COM              binary
+*.controller       binary
+*.cubemap          binary
+*.dex              binary
+*.dll              binary
+*.DLL              binary
+*.dylib            binary
+*.eps              binary
+*.exe              binary
+*.EXE              binary
+*.exr              binary
+*.fbx              binary
+*.FBX              binary
+*.fla              binary
+*.flare            binary
+*.flv              binary
+*.gif              binary
+*.guiskin          binary
+*.gz               binary
+*.ht               binary
+*.ico              binary
+*.jpeg             binary
+*.jpg              binary
+*.keystore         binary
+*.mask             binary
+*.mat              binary
+*.mb               binary
+*.mp3              binary
+*.mp4              binary
+*.mpg              binary
+*.ogg              binary
+*.PCX              binary
+*.pcx              binary
+*.pdb              binary
+*.pdf              binary
+*.physicMaterial   binary
+*.physicmaterial   binary
+*.png              binary
+*.ps               binary
+*.psd              binary
+*.qt               binary
+*.so               binary
+*.swf              binary
+*.tga              binary
+*.tif              binary
+*.tiff             binary
+*.ttf              binary
+*.TTF              binary
+*.unitypackage     binary
+*.unityPackage     binary
+*.wav              binary
+*.wmv              binary
+*.zip              binary
+*.ZIP              binary
