Ignore build folder in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
         "Obj/":true,
         "ProjectSettings/":true,
         "temp/":true,
-        "Temp/":true
+        "Temp/":true,
+        "Builds": true
     },
     "editor.detectIndentation": false,
     "editor.insertSpaces": true,
